[gd_scene load_steps=7 format=2]

[ext_resource path="res://artwork/actors/kopatych.png" type="Texture" id=1]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/actors/kopatych/npc.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.3082, 80.0946 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.2653, 79.8412 )

[node name="Kopatych" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 14.4419 )
shape = SubResource( 1 )

[node name="QuestionMark" type="Label" parent="."]
margin_left = -16.9016
margin_top = -115.868
margin_right = 7.09836
margin_bottom = -64.8679
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14.9487 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
